--- a/src/App.css
+++ b/src/App.css
@@ -385,7 +385,7 @@ height: 50%;
   color: #4a7dc0;
 }
 
-.banner-left button{ 
+.button { 
   padding: 0.5em;
   padding-left: 2em;
   padding-right: 2em;
@@ -398,6 +398,10 @@ height: 50%;
   border-radius: 10em;
   cursor: pointer;
   margin-top: 1em;
+}
+
+.button a {
+  color: white;
 }
 
 .banner-right img{
@@ -557,6 +561,11 @@ max-width: 100px;
   display: flex;
   align-items: center;
   justify-content: center;
+  text-align: center;
+}
+
+.trades-message-text button {
+
 }
 
 .trade-offer-desc li{
