--- a/src/CreateOffer.css
+++ b/src/CreateOffer.css
@@ -100,6 +100,7 @@
     width: 100%;
     background-color: var(--main2);
     justify-content: center;
+    color: var(--text);
 }
 
 .trade-confirm-text{
